--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
 
 .container {
   display: grid;
-  grid-template-columns: 10rem 20rem;
-  grid-template-rows: 5rem 10rem;
-  grid-auto-rows: 50rem 10rem;
+  grid-template-columns: 40rem 20rem;
+  grid-auto-flow: column;
+  grid-auto-columns: 20rem;
   grid-gap: 2rem; }
