define rows and columns using grid-template-areas

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -13,8 +13,36 @@
 
   display: grid;
   grid-gap: 2rem;
-  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-  // grid-template-columns: auto 15rem 15rem 15rem;
+  grid-template-columns: 1fr 50rem 1fr;
+  grid-template-rows: 15rem 15rem 15rem;
+  grid-template-areas: "sidebar-1 content sidebar-2"
+                        "sidebar-1 content sidebar-2"
+                        "footer footer footer"
+}
+
+.item1 {
+  grid-area: sidebar-1;
+}
+
+.item2 {
+  grid-area: content;
+}
+
+.item3 {
+  grid-area: sidebar-2;
+}
+
+.item4 {
+  grid-area: footer;
 }
 
 
+@media (max-width: 700px) {
+  .container {
+    grid-template-areas: "sidebar-1 content ."
+                          "sidebar-1 content ."
+                          "sidebar-2 content ."
+                          "sidebar-2 content ."
+                          "footer footer footer";
+  }
+}
