--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -9,40 +9,16 @@
 }
 
 .container {
-  border: .5rem solid var(--yellow);
+  border: 0.5rem solid var(--yellow);
 
   display: grid;
   grid-gap: 2rem;
-  grid-template-columns: 1fr 50rem 1fr;
-  grid-template-rows: 15rem 15rem 15rem;
-  grid-template-areas: "sidebar-1 content sidebar-2"
-                        "sidebar-1 content sidebar-2"
-                        "footer footer footer"
-}
-
-.item1 {
-  grid-area: sidebar-1;
-}
-
-.item2 {
-  grid-area: content;
+  grid-template-columns: [side-left] 1fr [content-start] 7fr [content-end] 1fr [side-right];
+  grid-template-rows: [content-top] repeat(10, auto) [content-bottom];
 }
 
 .item3 {
-  grid-area: sidebar-2;
-}
-
-.item4 {
-  grid-area: footer;
-}
-
-
-@media (max-width: 700px) {
-  .container {
-    grid-template-areas: "sidebar-1 content ."
-                          "sidebar-1 content ."
-                          "sidebar-2 content ."
-                          "sidebar-2 content ."
-                          "footer footer footer";
-  }
+  background-color: mistyrose;
+  grid-column: content-start / content-end;
+  grid-row: content-top / content-bottom;
 }
