--- a/css/style.css
+++ b/css/style.css
@@ -20,20 +20,22 @@ body {
   --yellow: #ffc600;
   --black: #272727; }
 
-.item {
-  font-size: 1.5rem;
-  background-color: white; }
-
-.container {
-  border: 0.5rem solid var(--yellow);
-  margin: 5rem auto;
-  max-width: 900px;
+.albums {
+  padding: 5rem;
   display: grid;
-  grid-gap: 2rem;
-  grid-template-columns: repeat(5, 10rem);
-  grid-template-rows: repeat(5, 10rem);
-  justify-content: center;
-  grid-auto-rows: 10rem; }
+  grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
+  grid-gap: 2rem; }
 
-.item3 {
-  justify-self: center; }
+.album {
+  background-color: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  padding: 2rem;
+  color: white;
+  font-weight: 100;
+  display: grid;
+  grid-template-columns: 15rem 1fr;
+  gap: 1rem;
+  align-items: center; }
+  .album__artwork {
+    width: 100%;
+    height: 100%; }
