--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,34 +1,24 @@
-// .item {
-//   display: grid;
-//   justify-content: center;
-//   align-items: center;
-//   border: 5px solid rgba(0, 0, 0, 0.3);
-//   border-radius: 3px;
-//   font-size: 3.5rem;
-//   background-color: var(--yellow);
-// }
-
-.item {
-  font-size: 1.5rem;
-  background-color: white;
+.albums {
+  padding: 5rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
+  grid-gap: 2rem;
 }
 
-.container {
-  border: 0.5rem solid var(--yellow);
-  margin: 5rem auto;
-  max-width: 900px;
+.album {
+  background-color: rgba(255,255,255,.2);
+  box-shadow: 0 0 5px rgba(0,0,0,.1);
+  padding: 2rem;
+  color: white;
+  font-weight: 100;
 
   display: grid;
-  grid-gap: 2rem;
-  grid-template-columns: repeat(5, 10rem);
-  grid-template-rows: repeat(5, 10rem);
-  // justify-items: center;
-  // align-items: center;
-  // place-items: center center;
-  justify-content: center;
-  grid-auto-rows: 10rem;
-}
+  grid-template-columns: 15rem 1fr;
+  gap: 1rem;
+  align-items: center;
 
-.item3 {
-  justify-self: center;
+  &__artwork {
+    width: 100%;
+    height: 100%;
+  }
 }
